plugins {
    id 'java'
    id 'maven-publish'
}

repositories {
    maven { url 'https://maven.aliyun.com/repository/public/' }
    mavenCentral()
    maven {
        url uri('../../repo')
    }
}
dependencies {
//    implementation files("${System.getProperty('java.home')}/../lib/tools.jar")
    System.out.println("[javac] jdkVersion:" + System.getProperty("java.version"))
    if (Integer.parseInt(System.getProperty("java.version").split("\\.")[0]) >= 16)
        implementation project(":inject_java16")
    else
        implementation project(":inject_java7")
//    implementation "com.by122006.zircon:base:0.1"
}
jar {
    manifest {
        attributes(
                'Add-Exports': "jdk.compiler/com.sun.tools.javac.api",
                'Automatic-Module-Name': "ALL-UNNAMED"
        )
    }
}
compileJava {
    sourceCompatibility = JavaVersion.VERSION_1_8
    targetCompatibility = JavaVersion.VERSION_1_8
    options.compilerArgs << "-Xlint:unchecked" << "-Xlint:deprecation" << "-XDignore:symbol.file"
//            << "--add-exports=jdk.compiler/com.sun.tools.javac.api=zircon.javac"
//            << "--add-exports=jdk.compiler/com.sun.tools.javac.comp=zircon.javac"
//            << "--add-exports=jdk.compiler/com.sun.tools.javac.main=zircon.javac"
//            << "--add-exports=jdk.compiler/com.sun.tools.javac.parser=zircon.javac"
//            << "--add-exports=jdk.compiler/com.sun.tools.javac.util=zircon.javac"
//    options.forkOptions.jvmArgs
//            << "-J--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED"
//            << "-J--add-opens=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED"

}
task sourceJar(type: Jar) {
    from sourceSets.main.allJava
    archiveClassifier = "sources"
}

publishing {
    publications {
        maven(MavenPublication) {
            groupId "com.by122006.zircon"
            artifactId "javac"
            version "0.2"
            from components.java
            artifact sourceJar
        }
    }
    repositories {
        maven {
            url = uri('../../repo')
        }
    }

}
sourceCompatibility = JavaVersion.VERSION_1_8
targetCompatibility = JavaVersion.VERSION_1_8
